# BoostSMLProject

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
src/: Actions.hpp  Events.hpp  Guards.hpp  Logger.hpp  Main.cpp  States.hpp  Transitions.hpp
